adds search made up

--- a/css/application.css
+++ b/css/application.css
@@ -31,5 +31,16 @@ body {
   #header li {
     display: inline-block;
     margin: 5px; }
+  #header .search {
+    width: 270px;
+    margin-right: 40px;
+    padding: 0;
+    float: right; }
+    #header .search a {
+      float: left; }
+    #header .search input {
+      margin-top: 2px;
+      float: right;
+      width: 220px; }
 
 /*# sourceMappingURL=application.css.map */
