--- a/css/application.css
+++ b/css/application.css
@@ -3,18 +3,10 @@ body {
   background-color: #599291;
   margin: 0; }
 
-.container {
-  width: 960px;
-  margin: 0 auto; }
-
-.wrapper {
-  margin: 0;
-  background-color: #599291; }
-
 #header {
   margin: 0;
   width: 100%;
-  height: 150px;
+  height: 120px;
   background: #3C2C3A; }
   #header .container-h {
     width: 960px;
@@ -41,6 +33,33 @@ body {
     #header .search input {
       margin-top: 2px;
       float: right;
-      width: 220px; }
+      width: 220px;
+      display: none; }
+
+.container {
+  width: 960px;
+  margin: 0 auto; }
+
+.wrapper {
+  margin: 0;
+  background-color: #599291; }
+  .wrapper .container img {
+    float: left;
+    margin-left: -155px; }
+
+.description {
+  margin: 80px 55px 0 0;
+  color: #fff;
+  float: right;
+  width: 400px;
+  font-size: 1.2em; }
+  .description button {
+    color: #fff;
+    background: #3C2C3A;
+    border: none;
+    width: 90px;
+    height: 30px;
+    font-size: 1em;
+    border: 2px solid #000; }
 
 /*# sourceMappingURL=application.css.map */
