--- a/css/application.scss
+++ b/css/application.scss
@@ -4,6 +4,8 @@ body {
   margin: 0;
 }
 
+@import 'header.scss';
+
 .container {
   width: 960px;
   margin: 0 auto;
@@ -12,7 +14,27 @@ body {
 .wrapper {
   margin: 0;
   background-color: #599291;
+  .container img {
+    float: left;
+    margin-left: -155px;
+  }
 }
 
-@import 'header.scss';
+.description {
+  margin: 80px 55px 0 0;
+  color: #fff;
+  float: right;
+  width: 400px;
+  font-size: 1.2em;
+  button {
+    color: #fff;
+    background: #3C2C3A;
+    border: none;
+    width: 90px;
+    height: 30px;
+    font-size: 1em;
+    border: 2px solid #000;
+  }
+}
+
 @import 'footer.scss';
