--- a/css/header.scss
+++ b/css/header.scss
@@ -1,7 +1,7 @@
 #header {
   margin: 0;
   width: 100%;
-  height: 150px;
+  height: 120px;
   background: #3C2C3A;
   .container-h {
     width: 960px;
@@ -34,6 +34,7 @@
       margin-top: 2px;
       float: right;
       width: 220px;
+      display: none;
     }
   }
 }
