--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,6 @@
     #header .search input {
       margin-top: 2px;
       float: right;
-      width: 220px;
-      display: none; }
+      width: 220px; }
 
 /*# sourceMappingURL=header.css.map */
