--- a/css/application.scss
+++ b/css/application.scss
@@ -14,6 +14,7 @@ body {
 .wrapper {
   margin: 0;
   background-color: #599291;
+  height: 410px;
   .container img {
     float: left;
     margin-left: -155px;
