--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,18 @@
-
+#footer {
+  height: 130px;
+  background-color: #3A2A38; }
+  #footer p {
+    padding-top: 10px;
+    color: #fff;
+    text-align: center; }
+  #footer ul {
+    text-align: center;
+    padding-top: 20px; }
+  #footer ul li {
+    background-color: #83617D;
+    margin: 0 15px 0 15px;
+    padding: 10px;
+    border-radius: 12px 12px 12px;
+    display: inline-block; }
 
 /*# sourceMappingURL=footer.css.map */
