--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,8 +1,8 @@
 #footer {
-  height: 130px;
+  height: 120px;
   background-color: #3A2A38;
   p {
-    padding-top: 10px;
+    margin-top: 10px;
     color: #fff;
     text-align: center;
   }
@@ -14,8 +14,11 @@
   ul li {
     background-color: #83617D;
     margin: 0 15px 0 15px;
-    padding: 10px;
+    padding: 7px 15px;
     border-radius: 12px 12px 12px;
     display: inline-block;
+  }
+  .social {
+    height: 85px;
   }
 }
