--- a/css/application.scss
+++ b/css/application.scss
@@ -2,6 +2,7 @@ body {
   font-family: "oratorstd";
   background-color: #599291;
   margin: 0;
+  height: 650px;
 }
 
 @import 'header.scss';
@@ -9,6 +10,7 @@ body {
 .container {
   width: 960px;
   margin: 0 auto;
+  height: 425px;
 }
 
 .wrapper {
