--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 #footer {
-  height: 130px;
+  height: 120px;
   background-color: #3A2A38; }
   #footer p {
-    padding-top: 10px;
+    margin-top: 10px;
     color: #fff;
     text-align: center; }
   #footer ul {
@@ -11,8 +11,10 @@
   #footer ul li {
     background-color: #83617D;
     margin: 0 15px 0 15px;
-    padding: 10px;
+    padding: 7px 15px;
     border-radius: 12px 12px 12px;
     display: inline-block; }
+  #footer .social {
+    height: 85px; }
 
 /*# sourceMappingURL=footer.css.map */
