--- a/css/application.css
+++ b/css/application.css
@@ -12,6 +12,10 @@ body {
   #header .container-h {
     width: 960px;
     margin: 0 auto; }
+  #header a {
+    text-decoration: none; }
+  #header a:visited {
+    color: #fff; }
   #header h1 {
     float: left;
     font-size: 3em;
@@ -35,6 +39,26 @@ body {
       margin-top: 2px;
       float: right;
       width: 220px; }
+
+#footer {
+  background-color: #3A2A38;
+  display: inline-block;
+  width: 100%; }
+  #footer p {
+    margin-top: 10px;
+    color: #fff;
+    text-align: center; }
+  #footer ul {
+    text-align: center;
+    padding-top: 20px; }
+  #footer ul li {
+    background-color: #83617D;
+    margin: 0 15px 0 15px;
+    padding: 7px 15px;
+    border-radius: 12px 12px 12px;
+    display: inline-block; }
+  #footer .social {
+    height: 85px; }
 
 .container {
   width: 960px;
@@ -64,23 +88,17 @@ body {
     font-size: 1em;
     border: 2px solid #000; }
 
-#footer {
-  height: 120px;
-  background-color: #3A2A38; }
-  #footer p {
-    margin-top: 10px;
-    color: #fff;
-    text-align: center; }
-  #footer ul {
-    text-align: center;
-    padding-top: 20px; }
-  #footer ul li {
-    background-color: #83617D;
-    margin: 0 15px 0 15px;
-    padding: 7px 15px;
-    border-radius: 12px 12px 12px;
-    display: inline-block; }
-  #footer .social {
-    height: 85px; }
+/* index's css */
+.result {
+  width: 1080px;
+  display: block;
+  margin: 0 auto; }
+
+.video {
+  float: left;
+  width: 350px;
+  margin: 0 5px; }
+
+/* result's css */
 
 /*# sourceMappingURL=application.css.map */
