--- a/css/application.scss
+++ b/css/application.scss
@@ -6,38 +6,6 @@ body {
 }
 
 @import 'header.scss';
-
-.container {
-  width: 960px;
-  margin: 0 auto;
-  height: 425px;
-}
-
-.wrapper {
-  margin: 0;
-  background-color: #599291;
-  height: 410px;
-  .container img {
-    float: left;
-    margin-left: -155px;
-  }
-}
-
-.description {
-  margin: 80px 55px 0 0;
-  color: #fff;
-  float: right;
-  width: 400px;
-  font-size: 1.2em;
-  button {
-    color: #fff;
-    background: #3C2C3A;
-    border: none;
-    width: 90px;
-    height: 30px;
-    font-size: 1em;
-    border: 2px solid #000;
-  }
-}
-
 @import 'footer.scss';
+@import 'home.scss'; /* index's css */
+@import 'result.scss'; /* result's css */
